<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="19dp"
    android:orientation="vertical"
    android:background="@drawable/gradient_bg"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/alex_brush"
        android:text="@string/title_text"
        android:textSize="30sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            app:cardElevation="6dp"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="8dp"
            android:layout_width="match_parent"
            android:layout_height="90dp">

            <TextView
                android:id="@+id/opText"
                android:text="@string/op_text"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

    <Button
        android:id="@+id/getStartedButton"
        android:text="@string/get_started_text"
        android:textColor="@color/colorAccent"
        android:background="@android:color/transparent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>