<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/gradient_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PostJournalActivity">

    <ImageView
        android:id="@+id/post_imageview"
        android:layout_width="match_parent"
        android:layout_height="243dp"
        android:src="@drawable/background_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/post_username_textview"
        android:textColor="@android:color/white"
        android:layout_width="123dp"
        android:layout_height="33dp"
        android:layout_marginTop="4dp"
        android:text="WayDawnt"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_camera_imageview" />

    <TextView
        android:id="@+id/post_date_textview"
        android:textColor="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Today"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.073"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_username_textview" />

    <ImageView
        android:id="@+id/post_camera_imageview"
        android:layout_width="111dp"
        android:layout_height="78dp"
        app:layout_constraintBottom_toBottomOf="@+id/post_imageview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.442"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <EditText
        android:id="@+id/post_title_et"
        android:layout_width="398dp"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/post_title"
        android:background="@drawable/edittext_stroke"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_imageview" />

    <EditText
        android:id="@+id/post_description_et"
        android:layout_width="398dp"
        android:layout_height="44dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/post_description"
        android:background="@drawable/edittext_stroke"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_title_et" />

    <ProgressBar
        android:id="@+id/post_progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        app:layout_constraintBottom_toTopOf="@+id/post_save_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_description_et"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/post_save_button"
        android:layout_width="381dp"
        android:layout_height="51dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/transparent"
        android:text="@string/save_button_text"
        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>